# shadowproxy2

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docker-image.yml
assets/: p2p_ip.txt
iofree/: exceptions.py  parser.py
shadowproxy2/: __main__.py  app.py  buffer.py  ciphers.py  client.py  config.py  container.py  context.py  models.py  server.py  throttle.py  urlparser.py  utils.py  ws_process_request.py
shadowproxy2/aiobuffer/: buffer.py  socks5.py
shadowproxy2/iofree/: __init__.py  buffer.py  parser.py  schema.py
shadowproxy2/parsers/: aead.py  base.py  http.py  socks4.py  socks5.py  trojan.py
shadowproxy2/transport/: aead.py  base.py  quic.py  tcp.py  ws.py
shadowproxy2/urlparser/: __init__.py  __main__.py  models.py
tests/: test_buffer.py  test_cli.py
