[tool.poetry]
name = "shadowproxy2"
version = "0.1.0"
description = "A proxy server that implements Socks5/Shadowsocks/Redirect/HTTP (tcp) and Shadowsocks/TProxy/Tunnel (udp) protocols."
license = "MIT"
authors = ["Yingbo Gu <tensiongyb@gmail.com>"]
maintainers = ["Yingbo Gu <tensiongyb@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/guyingbo/shadowproxy2"
repository = "https://github.com/guyingbo/shadowproxy2"
keywords = ["shadowproxy2", "proxy"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [
    { include = "shadowproxy2" },
]
include = [
    "certs/ssl_cert.pem",
    "certs/ssl_key.pem",
    "certs/pycacert.pem",
    "assets/p2p_ip.txt"
]

[tool.poetry.scripts]
shadowproxy = 'shadowproxy2.__main__:main'

[tool.poetry.dependencies]
python = "^3.10"
pynacl = "^1.5.0"
hkdf = "^0.0.3"
click = "^8.1.3"
aioquic = "^0.9.20"
websockets = "^10.4"
prometheus-client = "^0.15.0"
objgraph = "^3.5.0"
pympler = "^1.0.1"
dependency-injector = "^4.40.0"
pydantic = "^1.10.2"
parsimonious = "^0.10.0"
uvloop = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
